# opensrc-ai-libs

./: Readme.md
cerebras/: stream_response.py  test.py  tool_use.py
cerebras/cepo-impl/: Readme.md  main.py  pyproject.toml
cerebras/cepo-impl/cepo/: __init__.py  config.py  models.py  pipeline.py
cerebras/cepo-impl/cepo/analysis/: modules.py  signatures.py
cerebras/cepo-impl/cepo/executor/: modules.py  signatures.py
cerebras/cepo-impl/cepo/plan_gen/: modules.py  signatures.py
cerebras/cepo-impl/cepo/selection/: modules.py  signatures.py
cerebras/cepo-impl/cepo/utils/: logging.py  openai_client.py
cerebras/structured_outputs/: pydantic_use.py  structured_outputs.py  structured_outputs_for_code.py
confident-ai/: README.md  experiment_llm.py  test_llm_evalution.py  text_chatbot.py
dspy/: README.md
dspy/classification_module/: dspy_predict_classification.py  predict_code_classification.py
dspy/dspy-neo4j/: Readme.md  query_neo4j.py  text_to_cypher.py
dspy/information_extraction/: extracting_code_info.py  information_extraction.py
dspy/multi_stage_pipelines/: article_generator.py  code_analyzer.py
fireworks-ai/: algo_time_complexity_finder.py  tool_calling_llama.py
jina-ai/: README.md  embedding.py  reader.py  rerank.py  segmenter.py
mem0/: Readme.md  career_mentor.py  coding_assistant.py  health_coach.py
textgrad/: README.md  array_pair_algorithm.py  non_repeated_char_finder.py  textgrad_code_example.py  textgrad_code_example2.py  textgrad_example.py  textgrad_quadratic_solution.py  textgrad_reasoning_example.py
(+8 files in other folders)
